outputs/ndx-test/reevo/2025-07-28_21-04-58/problem_iter23_response0.txt_stdout.txt
[*] Running ...
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/ndx/eval.py", line 68, in <module>
    heuristics = load_heuristic_func(code_path)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/renjunji_2023/reevo/problems/ndx/eval.py", line 19, in load_heuristic_func
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/renjunji_2023/reevo/problems/ndx/tmp/gpt_temp_0_a08f268f.py", line 3
    # Calculate the 5-day and 20-day return as momentum indicators
                                                                  ^
IndentationError: expected an indented block after function definition on line 2
